--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,4 +49,4 @@ line_length = 119
 disallow_untyped_defs = true
 no_implicit_optional = true
 warn_return_any = true
-exclude = 'venv'
+exclude = 'venv, htmlcov, tests'
